# books-classifier

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.dvc/: config.templ
app/: config.py  main.py
app/api/common_services/: root.py  show_configs.py
app/api/v1/: api.py
app/api/v1/endpoints/: hello.py
app/schemas/: hello.py  root.py
books_classifier/: Dockerfile  docker-compose.local.yml
books_classifier/app/: config.py  main.py
books_classifier/app/api/: api.py  deps.py
books_classifier/app/api/common_services/: health.py  root.py  show_configs.py
books_classifier/app/classifier/: base_model.py
books_classifier/app/da_log/: logger.py
books_classifier/app/schemas/: classify.py  root.py
books_classifier/artifacts/models/: .gitignore  tfidf_logreg.dvc
books_classifier/configs/: log_cfg.yaml  settings.toml
dags/: mlflow_research.py  test.py  update_model.py
data_processing/: text_extracting.py
k8s/: books-classifier-deployment.yaml  books-classifier-service.yaml  books-volume.yaml  books_claim.yaml  books_pv.yaml  override-values-template.yaml
k8s/mlflow/: deployment.yaml  svc.yaml
k8s/mlflow/minio/: minio-pv.yaml  minio.yaml  secrets.yaml
k8s/mlflow/postgre/: postgre.yaml  pv.yaml  secrets.yaml
model_factory/: text_preprocessing.py  train_baseline.py
requests/: local_request_health.http  local_request_hello.http  local_request_root.http
scripts/: prepare_data.py  prepare_data.sh  s3zipfile.py  train_and_save.py  train_and_save.sh
tests/: docker-compose.yaml  load.yaml
(+3 files in other folders)
