[tool.poetry]
name = "books-classifier"
version = "0.1.0"
description = "Books Classifier"
authors = ["pimenov.d.v <pimenov.d.v@yandex.ru>"]
readme = "README.md"
packages = [
    {include = "books_classifier"}
    ]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.92.0"
dynaconf = "^3.1.11"
uvicorn = "^0.20.0"
pyaml = "^21.10.1"
black = "^23.1.0"
mypy = "^1.0.1"
pylint = "^2.16.2"
coverage = "^7.2.1"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.20.3"
isort = "^5.12.0"
bandit = "^1.7.4"
scikit-learn = "^1.2.1"
httpx = "^0.23.3"
boto3 = "^1.28.15"
tqdm = "^4.65.0"
python-docx = "^0.8.11"
rarfile = "^4.0"
textract = "^1.6.5"
rtfparse = "0.7.8"
pandas = "^2.0.3"
pyarrow = "^12.0.1"
click = "^8.1.6"
pystemmer = "^2.2.0.1"
dvc-s3 = "^2.23.0"
apache-airflow = "^2.6.3"
apache-airflow-providers-cncf-kubernetes = "^7.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
    line-length=79

[tool.bandit]
    [tool.bandit.assert_used]
    skips=["*/test_*.py", "*/gunicorn_conf.py"]


[tool.pylint]
    extension-pkg-whitelist = "pydantic"

    [tool.pylint."MESSAGES CONTROL"]
        confidence = ""
        disable = [
            "missing-function-docstring",
            "missing-module-docstring",
            "missing-class-docstring",
            "too-few-public-methods"
        ]